--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
 	"description" : "The CodeIgniter Application with Composer",
 	"require": {
-		"php": ">=7.4",
-		"codeigniter/framework": "3.1.*"
+		"php": ">=7.4.0",
+		"codeigniter/framework": "3.1.*",
+		"codinghamster/codeigniter-modular-extensions-hmvc": "^1.1"
 	}
 }
