--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-	"description" : "The CodeIgniter Application with Composer",
-	"require": {
-		"php": ">=7.4.0",
-		"codeigniter/framework": "3.1.*",
-		"codinghamster/codeigniter-modular-extensions-hmvc": "^1.1"
-	}
+  "description": "codeigniter",
+  "require": {
+    "php": ">=7.4.0",
+    "codeigniter/framework": "3.1.*",
+    "codinghamster/codeigniter-modular-extensions-hmvc": "^1.1",
+    "twig/twig": "^3.0"
+  }
 }
