--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "php": ">=7.4.0",
     "codeigniter/framework": "3.1.*",
     "codinghamster/codeigniter-modular-extensions-hmvc": "^1.1",
-    "twig/twig": "^3.0"
+    "twig/twig": "^3.0",
+    "vlucas/phpdotenv": "^5.4"
   }
 }
