--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
 .DS_Store
 .env
 
-application/cache/*
-!application/cache/.gitkeep
+src/cache/*
+!src/cache/.gitkeep
 
-application/logs/*
-!application/logs/.gitkeep
+src/logs/*
+!src/logs/.gitkeep
 
-!application/*/.htaccess
+!src/*/.htaccess
 
 composer.lock
 package-lock.json
 
 /vendor/
 /node_modules/
-/bin/
 
 # IDE Files
 #-------------------------
-.idea/*
 .vscode/*
