--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
     "twig/twig": "^3.0",
     "vlucas/phpdotenv": "^5.4"
   },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
   "scripts": {
     "post-install-cmd": [
       "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
