--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "php": ">=7.4.0",
     "codeigniter/framework": "3.1.*",
     "twig/twig": "^3.0",
-    "vlucas/phpdotenv": "^5.4"
+    "vlucas/phpdotenv": "^5.4",
+    "guzzlehttp/guzzle": "^7.4",
+    "firebase/php-jwt": "^6.1"
   },
   "scripts": {
     "matches": "php public/index.php matches",
